fix(datepicker header): align chevron icons in the middle vertically

--- a/src/components/Datepicker/datepicker-header.css
+++ b/src/components/Datepicker/datepicker-header.css
@@ -28,4 +28,5 @@
 }
 .datepicker-header svg {
   font-size: 10rem;
+  vertical-align: middle;
 }
